--- a/public/recaptcha.html
+++ b/public/recaptcha.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 </head>
 
-<body style="display: flex; justify-content: center;">
+<body>
     <p style="text-align: center; font-size: 1.2em;">Please, select captcha for continue</p>
     <button id="continue-btn" style="display:none">Continue to app</button>
 
