check firebase domain

--- a/public/recaptcha.html
+++ b/public/recaptcha.html
@@ -22,6 +22,7 @@
         var config = {
             apiKey: "AIzaSyCT1LV1HF5REJw_SePsUeUdwFalo5IzrsQ",
             authDomain: "rowena-88cfd.firebaseapp.com",
+            // authDomain: "rowena-88cfd.web.app",
             databaseURL: "https://rowena-88cfd.firebaseio.com",
             projectId: "rowena-88cfd",
             storageBucket: "rowena-88cfd.appspot.com",
