privacy policy for apple added

--- a/public/privacy_policy.html
+++ b/public/privacy_policy.html
@@ -60,7 +60,8 @@
       used by the app
     </p>
     <ul>
-      <li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a></li>
+      <li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play</a></li>
+      <li><a href="https://www.apple.com/legal/privacy/en-ww/" target="_blank">App Store</a></li>
       <!---->
       <!---->
       <!---->
