company name changed

--- a/public/privacy_policy.html
+++ b/public/privacy_policy.html
@@ -16,9 +16,9 @@
 <body>
   <h2>Privacy Policy</h2>
   <p>
-    Nubeble, Inc. built the Rowena app as
+    Nubeble Inc. built the Rowena app as
     a Free app. This service is provided by
-    Nubeble, Inc. at no cost and is intended for
+    Nubeble Inc. at no cost and is intended for
     use as is.
   </p>
   <p>
