change png color

--- a/public/support.html
+++ b/public/support.html
@@ -17,24 +17,24 @@
         }
 
         #text1 {
-            color: rgb(80, 80, 80);
+            color: #CD5E77;
             font-size: x-large;
             font-weight: bold;
             font-family: 'Concert One', cursive;
 
-            margin-top: 0;
+            margin-top: 10px;
             margin-bottom: 0;
             margin-left: 0;
             margin-right: 0;
         }
 
         #text2 {
-            color: rgb(254, 94, 42);
+            color: rgb(80, 80, 80);
             font-size: large;
             font-weight: 500;
             font-family: 'Concert One', cursive;
 
-            margin-top: 10px;
+            margin-top: 20px;
             margin-bottom: 0;
             margin-left: 0;
             margin-right: 0;
@@ -59,7 +59,6 @@
     <div style="
         width: 100%;
         height: 90%;
-        background-color: white;
         
         display: flex;
         flex-direction: column;
@@ -73,27 +72,23 @@
             flex-direction: column;
             align-items: center;
         ">
-            <img src="call.jpg" style="
-                width: 20%;
-                max-width: 90px;
+            <img src="call.png" style="
+                width: 100px;
             ">
-            <h1 id="text1">CALL US</h1>
-            <h2 id="text2">+82 10 9308 8300</h2>
+            <p id="text1">CALL US</p>
+            <p id="text2">+82 10 9308 8300</p>
         </div>
 
         <div style="
-            margin-top: 50px;
+            margin-top: 60px;
+
             width: 100%;
             display: flex;
             flex-direction: column;
-            justify-content: center;
             align-items: center;
         ">
-            <img src="contact.jpg" style="
-                width: auto;
-                height : auto;
-                max-height: 100%;
-                max-width: 100%;
+            <img src="contact.png" style="
+                width: 100px;
             ">
             <p id="text1">CONTACT US</p>
             <p id="text2">door.rowena@gmail.com</p>
