support URL added

--- a/public/support.html
+++ b/public/support.html
@@ -22,7 +22,7 @@
             font-weight: bold;
             font-family: 'Concert One', cursive;
 
-            margin-top: 10px;
+            margin-top: 8px;
             margin-bottom: 0;
             margin-left: 0;
             margin-right: 0;
@@ -34,7 +34,7 @@
             font-weight: 500;
             font-family: 'Concert One', cursive;
 
-            margin-top: 20px;
+            margin-top: 16px;
             margin-bottom: 0;
             margin-left: 0;
             margin-right: 0;
@@ -45,10 +45,11 @@
 <body>
     <div style="
         width: 100%;
-        height: 10%;
+        height: 8%;
         background-color: #CD5E77;
     ">
         <img src="logo.png" style="
+            margin-left: 1.5%;
             width: auto;
             height : auto;
             max-height: 100%;
@@ -74,6 +75,7 @@
         ">
             <img src="call.png" style="
                 width: 100px;
+                filter: invert(42%) sepia(13%) saturate(7221%) hue-rotate(318deg) brightness(102%) contrast(61%);
             ">
             <p id="text1">CALL US</p>
             <p id="text2">+82 10 9308 8300</p>
@@ -89,6 +91,7 @@
         ">
             <img src="contact.png" style="
                 width: 100px;
+                filter: invert(42%) sepia(13%) saturate(7221%) hue-rotate(318deg) brightness(102%) contrast(61%);
             ">
             <p id="text1">CONTACT US</p>
             <p id="text2">door.rowena@gmail.com</p>
