minor changed on hosting

--- a/public/recaptcha.html
+++ b/public/recaptcha.html
@@ -5,10 +5,11 @@
     <title>recaptcha</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <p style="text-align: center; font-size: 1.2em;">Please, select captcha for continue</p>
+    <p style="text-align: center; font-size: 1.2em; font-family: 'Roboto', sans-serif;">Please select captcha for continue</p>
     <button id="continue-btn" style="display:none">Continue to app</button>
 
 
