--- a/public/privacy_policy.html
+++ b/public/privacy_policy.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -16,19 +16,19 @@
 <body>
   <h2>Privacy Policy</h2>
   <p>
-    Nubeble Inc. built the Rowena app as
-    a Free app. This service is provided by
+    Nubeble Inc. built Rowena as
+    a free app. This service is provided by
     Nubeble Inc. at no cost and is intended for
     use as is.
   </p>
   <p>
     This page is used to inform visitors regarding
-    my policies with the collection, use, and
+    our policies with the collection, use, and
     disclosure of Personal Information if anyone decided to use
-    my service.
+    our service.
   </p>
   <p>
-    If you choose to use my service, then you agree
+    If you choose to use our service, then you agree
     to the collection and use of information in relation to this
     policy. The Personal Information that I collect is
     used for providing and improving the service.
@@ -42,7 +42,7 @@
     Rowena unless otherwise defined in this Privacy
     Policy.
   </p>
-  <p><strong>Information Collection and Use</strong></p>
+  <h3><strong>Information Collection and Use</strong></h3>
   <p>
     For a better experience, while using our service,
     I may require you to provide us with certain
@@ -74,19 +74,19 @@
       <!---->
     </ul>
   </div>
-  <p><strong>Log Data</strong></p>
+  <h3><strong>Log Data</strong></h3>
   <p>
     I want to inform you that whenever
-    you use my service, in a case of an error in the
+    you use our service, in a case of an error in the
     app I collect data and information (through third
     party products) on your phone called Log Data. This Log Data
     may include information such as your device Internet
     Protocol (“IP”) address, device name, operating system
     version, the configuration of the app when utilizing
-    my service, the time and date of your use of the
+    our service, the time and date of your use of the
     service, and other statistics.
   </p>
-  <p><strong>Cookies</strong></p>
+  <h3><strong>Cookies</strong></h3>
   <p>
     Cookies are files with a small amount of data that are
     commonly used as anonymous unique identifiers. These are
@@ -102,7 +102,7 @@
     device. If you choose to refuse our cookies, you may not be
     able to use some portions of this service.
   </p>
-  <p><strong>Service Providers</strong></p>
+  <h3><strong>Service Providers</strong></h3>
   <p>
     I may employ third-party companies
     and individuals due to the following reasons:
@@ -121,7 +121,7 @@
     not to disclose or use the information for any other
     purpose.
   </p>
-  <p><strong>Security</strong></p>
+  <h3><strong>Security</strong></h3>
   <p>
     I value your trust in providing us
     your Personal Information, thus we are striving to use
@@ -130,7 +130,7 @@
     of electronic storage is 100% secure and reliable, and
     I cannot guarantee its absolute security.
   </p>
-  <p><strong>Links to Other Sites</strong></p>
+  <h3><strong>Links to Other Sites</strong></h3>
   <p>
     This Service may contain links to other sites. If you click
     on a third-party link, you will be directed to that site.
@@ -141,12 +141,12 @@
     responsibility for the content, privacy policies, or
     practices of any third-party sites or services.
   </p>
-  <p><strong>Children’s Privacy</strong></p>
+  <h3><strong>Children’s Privacy</strong></h3>
   <p>
-    These services do not address anyone under the age of 13.
+    These services do not address anyone under the age of 18.
     I do not knowingly collect personally
-    identifiable information from children under 13. In the case
-    I discover that a child under 13 has provided
+    identifiable information from children under 18. In the case
+    I discover that a child under 18 has provided
     me with personal information,
     I immediately delete this from our servers. If you
     are a parent or guardian and you are aware that your child
@@ -154,7 +154,7 @@
     me so that I will be able to do
     necessary actions.
   </p>
-  <p><strong>Changes to This Privacy Policy</strong></p>
+  <h3><strong>Changes to This Privacy Policy</strong></h3>
   <p>
     I may update our Privacy Policy from
     time to time. Thus, you are advised to review this page
@@ -163,11 +163,11 @@
     on this page. These changes are effective immediately after
     they are posted on this page.
   </p>
-  <p><strong>Contact Us</strong></p>
+  <h3><strong>Contact Us</strong></h3>
   <p>
     If you have any questions or suggestions about
-    my Privacy Policy, do not hesitate to contact
-    me at jdub.kim@gmail.com.
+    our Privacy Policy, do not hesitate to contact
+    me at door.rowena@gmail.com.
   </p>
 </body>
 
