--- a/public/recaptcha.html
+++ b/public/recaptcha.html
@@ -6,15 +6,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: Roboto, Helvetica, Arial, sans-serif;
+        }
+    </style>
 </head>
 
 <body>
-    <!--
-    <p style="text-align: center; font-size: 1.2em; font-family: 'Roboto', sans-serif;">Please select captcha for
-        continue
-    </p>
-    -->
-    <p style="text-align: center; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 1.2em;">Please
+    <p style="text-align: center; font-size: 20px; font-weight: 400; color: rgba(0, 0, 0, 0.6);">Please
         select captcha for continue</p>
 
     <!-- Firebase App is always required and must be first -->
@@ -71,7 +71,7 @@
 
             // btn.setAttribute("style", "color:red; font-size:23px");
             btn.setAttribute("style",
-                "margin-top: 10px; width: 85%; height: 40px; border: none; border-radius: 5px; background-color: #3EA5FF; color: white; text-align: center; text-decoration: none; display: inline-block; font-size: 16px;");
+                "margin-top: 10px; width: 85%; height: 40px; border: none; border-radius: 5px; background-color: #3EA5FF; color: white; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; font-weight: 400;");
 
             btn.onclick = (event) => {
                 window.open(finalUrl, '_blank');
